--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <option value="">Hindi</option>
                 <option value="">Tamil</option>
             </select>
-            <button class="btn btn_1">Sign in</button>
+            <a href="signin.html"><button class="btn btn_1">Sign in</button></a>
         </div>
     </div>
 
@@ -166,13 +166,3 @@ You can watch as much as you want, whenever you want, without a single ad - all 
 </body>
 </html>
 
-<!-- bg image -->
-<!-- https://assets.nflxext.com/ffe/siteui/vlv3/6c884f48-f7d8-4a59-9d25-b7c138813aee/ed2b002b-c6c5-459c-9c97-753f50e8286b/IN-en-20230807-popsignuptwoweeks-perspective_alpha_website_large.jpg -->
-
-
-<!-- video inside tv -->
-<!-- https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v -->
-
-
-<!-- tv -->
-<!-- https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png  -->
